--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       border: 0;
       box-shadow: none;
     }
+
+    .reveal figcaption {
+      font-size: 50%;
+    }
     </style>
   </head>
   <body>
@@ -246,8 +250,23 @@
             <h1>Composition</h1>
           </section>
           <section data-external="slides/composition.html"></section>
+          <section data-external="slides/composition2.html"></section>
+          <section data-external="slides/composition3.html"></section>
         </section>
 
+        <!-- concepts avancés -->
+        <section>
+          <section>
+            <h1>Concepts avancés</h1>
+            <aside class="notes">
+                concepts avancés ou design patterns, on les retrouve dans la plupart des langages fonctionnels<br>
+            </aside>
+          </section>
+          <section data-external="slides/struct-algebriques.html"></section>
+          <section data-external="slides/monad.html"></section>
+          <section data-external="slides/maybe.html"></section>
+          <section data-external="slides/either.html"></section>
+        </section>
         <!-- Les amis - ->
         <section>
           <section>
