--- a/slides/fpjslibs.html
+++ b/slides/fpjslibs.html
@@ -2,4 +2,6 @@
 
 <ul>
     <li><a href="https://github.com/stoeffel/awesome-fp-js">Awesome fp js</a>: Une sélection des meilleures librairies fonctionnelles en JS</li>
+    <li><a href="https://github.com/fantasyland/fantasy-land">Fantasy Land</a>Une convention de nommage pour faciliter l'interopérabilité entre librairies fonctionnelles</li>
+    <li><a href="https://github.com/fantasyland/fantasy-land/blob/master/implementations.md">Liste de librairies implémentant Fantasy Land</li>
 </ul>
