--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
           <section data-external="slides/reduce2.html"></section>
           <section data-external="slides/flatmap.html"></section>
           <section data-external="slides/flatmap2.html"></section>
+          <section data-external="slides/exercices/collections.html"></section>
         </section>
 
         <!-- Effets de bord -->
