--- a/slides/poocnul.html
+++ b/slides/poocnul.html
@@ -1,13 +1,13 @@
-<h1>La POO c'est nul ?</h1>
+<h1>La POO c'est 💩 ?</h1>
 
 <ul>
   <li>un progrès dans la façon de coder</li>
-  <li>permet de séparer les responsabilités</li>
+  <li>séparation des responsabilités</li>
   
   <li style="list-style-type: none; text-align: center; margin: 15px 0;">mais</li>
   
-  <li>peut amener des <strong>effets de bord</strong></li>
+  <li>amène des <strong>effets de bord</strong></li>
   <li>méthode qui modifie un attribut, pas prévu par l'appelant</li>
-  <li>en prog ƒ<sup>elle</sup> on évite les changements d'état pour limiter ces effets de bords</li>
+  <li>en prog ƒ<sup>elle</sup> éviter les changements d'état pour limiter ces effets de bords</li>
   <li>un langage purement fonctionnel oblige l'utilisation de fonctions uniquement</li>
 </ul>
