review composition & poo

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <h1>Fonctions pures<br><small>&amp;</small><br>Effets de bord</h1>
           </section>
           <section data-external="slides/poocnul.html"></section>
-
+          <section data-external="slides/poocnul2.html"></section>
           <section>
             <h1>Fonctions pures</h1>
             <blockquote>
