--- a/slides/composition.html
+++ b/slides/composition.html
@@ -9,55 +9,28 @@
     	</ul>
 </ul>
 
-<!-- exemple -->
-<pre><code class="javascript" data-trim data-noescape>
-//exemple non fonctionnel
 
-const toSlug = input => encodeURIComponent(
-  input.split(' ')
-    .map(str => str.toLowerCase())
-    .join('-')
-);
-</code></pre>
 
 <!--
-afficher les notes transposées
 
-fonctions : show, transpose
-
-en entrée : notes [ [1, 2], [2, 0.5], [3, 0.25] ]
-
-
-function addToDomElt(elem, html) {
-  document.getElementById(elem).innerHtml = html;
-}
+var notes = [ 1, 2, 3 ]
 
 function noteValueToText(note) {
   var notes = [ 'do', 'ré', 'mi', 'fa' , 'sol', 'la', 'si'];
   return notes[note % 7];
 }
 
-function noteDurationToText(val)
- {
-  var durations = {'1': 'noire', '2': 'blanche', '4': 'ronde', '0.5': 'croche'}
-  return notes[val.toString()];
-}
-
 // []
-function displayNote(note) {
-  return '['+
+function displayNotes(notes, elem) {
+    var buffer = '';
+    for (var i=0; i< notes.length; i++) {
+        buffer += noteValueToText(notes[i])+ ' ';
+    }
+    document.getElementById(elem).innerHTML = buffer;
 }
 
-//
-function echo() {
-  
 
-}
-
-addToDomElt('result', 
-  notes.forEach()
-
-);
+// version fonctionnelle
 
 -->
 
