--- a/slides/composition2.html
+++ b/slides/composition2.html
@@ -1,15 +1,21 @@
 <h1>Composition</h1>
 
 <!-- exemple -->
-<pre><code class="javascript" data-trim data-noescape>
-//exemple fonctionnel
+<pre><code id="composition" class="javascript" data-trim data-noescape>
+//exemple non fonctionnel
 
-const pipe = require('lodash/fp/pipe');
-const toSlug = pipe([
-  split(' '),
-  map(toLowerCase),
-  join('-'),
-  encodeURIComponent
-]);
+var notes = [ 1, 2, 3 ]
 
+function noteValueToText(note) {
+  var notes = [ 'do', 'ré', 'mi', 'fa' , 'sol', 'la', 'si'];
+  return notes[note % 7];
+}
+
+function displayNotes(notes, elem) {
+    var buffer = '';
+    for (var i=0; i< notes.length; i++) {
+        buffer += noteValueToText(notes[i])+ ' ';
+    }
+    document.getElementById(elem).innerHTML = buffer;
+}
 </code></pre>
