refined composition & drafted currying

--- a/index.html
+++ b/index.html
@@ -253,6 +253,15 @@
           <section data-external="slides/composition.html"></section>
           <section data-external="slides/composition2.html"></section>
           <section data-external="slides/composition3.html"></section>
+          <section data-external="slides/composition4.html"></section>
+        </section>
+
+        <section>
+            <section>
+                <h1>Application partielle de fonction</h1>
+            </section>
+            <section data-external="slides/curry.html"></section>
+            <section data-external="slides/curry2.html"></section>
         </section>
 
         <!-- concepts avancés -->
