--- a/slides/composition4.html
+++ b/slides/composition4.html
@@ -1,9 +1,21 @@
 <h1>Tap() et trace()</h1>
 
-
+Comment débugguer un pipe()?<br>
 
 <!-- exemple -->
 <pre><code class="javascript" data-trim data-noescape>
-// tap et trace de lodash?
+// avec tap() et trace() !
+
+function displayNotes(elem) {
+	pipe(
+		map(noteValueToText),
+		tap(alert),
+		join(' '),
+		trace('après le join()'),
+		addToDomElem(elem)
+	);
+}
 
 </code></pre>
+
+
