--- a/slides/composition4.html
+++ b/slides/composition4.html
@@ -1,3 +1,4 @@
+<img class="workimg" src="css/workimg/johnny-automatic-Mississippi-pilot-800px.png" style="height:50%;position:absolute;left:-21%;top:39%">
 <h1>Tap() et trace()</h1>
 
 Comment débugguer un pipe()?<br>
