--- a/slides/curry.html
+++ b/slides/curry.html
@@ -1,3 +1,4 @@
+<img class="workimg" src="css/workimg/johnny-automatic-using-the-chalkline-800px.png" style="height:50%">
 <h1>Application partielle de fonction</h1>
 
 
