--- a/slides/mixpoofonctionelle.html
+++ b/slides/mixpoofonctionelle.html
@@ -1,6 +1,8 @@
-<h3>Non ! Rien n'empêche d'utiliser les deux concepts.</h3>
+<img class="workimg" src="css/workimg/tandem-bike-riders-800px.png" style="right:-19%;position:absolute;top:20%">
+<h3>Non ! Rien n'empêche d'utiliser les deux concepts</h3>
+<br>
 <ul>
-  <li>on peut réutiliser du code déjà existant</li>
+  <li>on peut réutiliser du code existant</li>
   <li>on peut préférer la POO pour certains aspects</li>
   <li>au final, plus un choix subjectif qu'une règle d'or</li>
 </ul>
