--- a/slides/monad.html
+++ b/slides/monad.html
@@ -1,3 +1,4 @@
+<img class="workimg" src="css/workimg/johnny-automatic-splitting-end-grain-800px.png" style="height:33%;position:absolute;right:-19%;top:51%">
 <h1>Monades</h1>
 
 <blockquote>
@@ -6,13 +7,13 @@
 </blockquote>
 
 <ul>
-	<li>Utilisation principale: conteneur de donnée avec un comportement spécifique</li>
+	<li>Conteneur avec un comportement spécifique</li>
 	<li>Permet de chaîner des opérations</li>
 	<li>Exemples:
 		<ul>
 			<li>Maybe: gestion des valeurs vides</li>
 			<li>Either: gestion des erreurs</li>
-			<li>Continuation: gestion de l'asynchrone (= Promise)</li>
+			<li>Continuation: gestion l'asynchrone (= Promise)</li>
 		</ul>
 	</li>
 	</ul>
