--- a/index.html
+++ b/index.html
@@ -30,18 +30,22 @@
     table.msg td {
       border-right: black 1px solid;
     }
-
     #demomidi {
       font-size: 38px;
     }
-
     .reveal section img.sshot {
       border: 0;
       box-shadow: none;
     }
-
     .reveal figcaption {
       font-size: 50%;
+    }
+    .reveal section img.workimg {
+      border: none;
+      box-shadow: none;
+      right: 0%;
+      height: 45%;
+      float: right;
     }
     </style>
   </head>
@@ -53,6 +57,7 @@
         <section>
             <h1>JavaScript fonctionnel</h1>
             <h2>Paris Web'16</h2>
+            <h3 style="text-transform:lowercase"><a href="http://github.com/vincent/js-fp">github.com/vincent/js-fp</a></h3>
         </section>
 
         <!-- Hello -->
@@ -76,7 +81,7 @@
           <div class="clearfix">
             <img class="speaker-pic" src="css/vincent.jpg">
             <h2>Vincent Lark - @allyouneedisgnu</h2>
-            <span>In Pastafari we trust</span>
+            <span>sugar-powered developer</span>
           </div>
           <aside class="notes">
             Tout d'abord, une rapide présentation.
@@ -126,12 +131,12 @@
           <blockquote>
             Une méthode de programmation qui préfère l'utilisation de fonctions aux changements d'état.
           </blockquote>
-        <aside class="notes">
-            - plein d'autres définitions, on a essayé de faire simple ici<br>
-            - concept de base: fonction, <br>
-            - on va tout faire à base de fonction, composer des fonctions entre elles, etc.<br>
-            - style de programmation et paradigme, d'autres paradigmes existent: impératif, orienté objet, ...<br>
-            - changement d'état: état de votre app javascript = contenu de vos variables à un instant t. Plus les états et les changements entre états sont complexes, plus on risque des bugs via effets de bord.<br>
+          <aside class="notes">
+            plein d'autres définitions, on a essayé de faire simple ici<br>
+            concept de base: fonction, <br>
+            on va tout faire à base de fonction, composer des fonctions entre elles, etc.<br>
+            style de programmation et paradigme, d'autres paradigmes existent: impératif, orienté objet, ...<br>
+            changement d'état: état de votre app javascript = contenu de vos variables à un instant t. Plus les états et les changements entre états sont complexes, plus on risque des bugs via effets de bord.<br>
           </aside>
         </section>
 
@@ -160,8 +165,10 @@
         <!-- Exercice 1 -->
         <section>
           <section>
+            <img class="workimg" src="css/workimg/johnny-automatic-withdrawing-the-iron-800px.png">
             <h1>Getting started</h1>
             <aside class="notes">
+              Vincent<br>
               Avant d'aller plus loin, je vous propose d'ouvrir le support d'atelier que l'on vous a fourni.<br>
               Si vous ne l'avez pas, demandez-le nous, on vous le donnera sur clé USB, c'est rapide à mettre en place.<br>
             </aside>
@@ -175,6 +182,7 @@
         <!-- Fil rouge -->
         <section>
           <section>
+            <img class="workimg" src="css/workimg/johnny-automatic-Dapper-Dan-800px.png" style="position:absolute;right:-16%">
             <h1>Functions as first class citizen</h1>
             <h4>Fonction d'ordre supérieur</h4>
             <br>
@@ -184,6 +192,9 @@
               les fonctions peuvent être passées en paramètre<br>
               et/ou en retour d'autres fonctions.
             </blockquote>
+            <aside class="notes">
+              Vincent<br>
+            </aside>
           </section>
           <section data-external="slides/function_as_argument.html"></section>
           <section data-external="slides/function_as_return.html"></section>
@@ -192,8 +203,10 @@
         <!-- Collections -->
         <section>
           <section>
+            <img class="workimg" src="css/workimg/paring-800px.png" style="height:35%">
             <h1>Collections</h1>
             <aside class="notes">
+              Alain<br>
               Utilisation la plus courante du style fonctionel: les listes ou collections<br>
               Souvent besoin du concept d'itération, sous différentes formes<br>
               Quelques exemples les plus utiles
@@ -213,11 +226,16 @@
         <!-- Effets de bord -->
         <section>
           <section>
+            <img class="workimg" src="css/workimg/johnny-automatic-marking-distance-800px.png" style="height:35%">
             <h1>Fonctions pures<br><small>&amp;</small><br>Effets de bord</h1>
+            <aside class="notes">
+              Vincent<br>
+            </aside>
           </section>
           <section data-external="slides/poocnul.html"></section>
           <section data-external="slides/poocnul2.html"></section>
           <section>
+            <img class="workimg" src="css/workimg/johnny-automatic-wing-800px.png" style="height:80%;right:-10%;position:absolute;top:-25%">
             <h1>Fonctions pures</h1>
             <blockquote>
               Une fonction pure est une fonction déterministe sans changements d'état.
@@ -232,6 +250,9 @@
           <section data-external="slides/ex_fonctionpure.html"></section>
 
           <section>
+            <aside class="notes">
+              Vincent<br>
+            </aside>
             <h1>Pour quoi faire ?</h1>
             <blockquote>
               En gardant des fonctions pures, on évite les mutations, et donc les effets de bords.
@@ -240,6 +261,9 @@
           </section>
 
           <section>
+            <aside class="notes">
+              Vincent<br>
+            </aside>
             <h1>La POO et la prog. fonctionnelle sont incompatibles ?</h1>
           </section>
           <section data-external="slides/mixpoofonctionelle.html"></section>
@@ -248,7 +272,11 @@
         <!-- Composition -->
         <section>
           <section>
+            <aside class="notes">
+              Alain<br>
+            </aside>
             <h1>Composition</h1>
+            <img class="workimg" src="css/workimg/johnny-automatic-big-sandwich-800px.png" style="height:50%;float:none">
           </section>
           <section data-external="slides/composition.html"></section>
           <section data-external="slides/composition2.html"></section>
@@ -269,7 +297,7 @@
           <section>
             <h1>Concepts avancés</h1>
             <aside class="notes">
-                concepts avancés ou design patterns, on les retrouve dans la plupart des langages fonctionnels<br>
+              concepts avancés ou design patterns, on les retrouve dans la plupart des langages fonctionnels<br>
             </aside>
           </section>
           <section data-external="slides/struct-algebriques.html"></section>
@@ -277,6 +305,7 @@
           <section data-external="slides/maybe.html"></section>
           <section data-external="slides/either.html"></section>
         </section>
+
         <!-- Les amis - ->
         <section>
           <section>
@@ -291,9 +320,13 @@
         <section>
           <section>
             <h1>Ecosystème</h1>
+            <img class="workimg" src="css/workimg/johnny-automatic-landscape-5-800px.png" style="height:auto;margin: 15% 7% 0 auto">
           </section>
           <section>
-              <h1>Les "amis"</h1>
+            <h1>Les "amis"</h1>
+            <aside class="notes">
+              Vincent<br>
+            </aside>
           </section>
           <section data-external="slides/react.html"></section>
           <section data-external="slides/async.html"></section>
@@ -301,12 +334,14 @@
           <section data-external="slides/streams.html"></section>
           <section>
             <h1>Les libs</h1>
+            <img class="workimg" src="css/workimg/johnny-automatic-books-800px.png" style="height:auto;margin:8% 26% 0 auto;width:50%;">
           </section>  
           <section data-external="slides/lodash.html"></section>
           <section data-external="slides/immutable.html"></section>
           <section data-external="slides/fpjslibs.html"></section>
           <section>
             <h1>Le futur</h1>
+            <img class="workimg" src="css/workimg/steamman-black-800px.png" style="float:none;margin:0;height:60%">
           </section>
           <section data-external="slides/es6-7.html"></section>
         </section>
