--- a/slides/exercices/ex1.html
+++ b/slides/exercices/ex1.html
@@ -1,3 +1,4 @@
+<img class="workimg" src="css/workimg/johnny-automatic-withdrawing-a-nail-800px.png" style="position:absolute;right:-16%">
 <h1>Exercice 1</h1>
 
 <blockquote>
