--- a/slides/reduce.html
+++ b/slides/reduce.html
@@ -1,3 +1,4 @@
+<img class="workimg" src="css/workimg/johnny-automatic-log-splitting-800px.png" style="position:absolute;right:-16%">
 <h1>reduce()</h1>
 
 <blockquote>
