--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 
         <!-- Définition -->
         <section>
+          <img class="workimg" src="css/workimg/johnny-automatic-blueprints-800px.png" style="position: absolute;height: 62%;right:-10%;top:-40%;">
           <h1>Définition</h1>
           <blockquote>
             Une méthode de programmation qui préfère l'utilisation de fonctions aux changements d'état.
@@ -141,6 +142,7 @@
         </section>
 
         <section>
+          <img class="workimg" src="css/workimg/johnny-automatic-holding-the-bow-800px.png" style="position: absolute;height:85%;right:-10%;top:-40%;">
           <h1>À quoi ça sert?</h1>
           <ul>
             <li>Moins d'effets de bords</li>
@@ -194,6 +196,8 @@
             </blockquote>
             <aside class="notes">
               Vincent<br>
+              Passons maintenant au concept probablement le plus important de la prog. fonctionnelle<br>
+              Le concept de fonctions d'ordre supérieur
             </aside>
           </section>
           <section data-external="slides/function_as_argument.html"></section>
