--- a/slides/find.html
+++ b/slides/find.html
@@ -17,6 +17,6 @@ partition.find(function (note){
 </code></pre>
 
 <aside class="notes">
-  Utile pour ne retenir que chercher un élément particulier<br>
+  Utile pour chercher un élément particulier<br>
   Ou savoir si  "au moins 1 élément vérifie une condition"
 </aside>
