--- a/slides/midi2.html
+++ b/slides/midi2.html
@@ -1,3 +1,4 @@
+<img class="workimg" src="css/workimg/johnny-automatic-fingering-position-800px.png" style="position:absolute;left:-14%;top:7%;">
 <h1>MIDI ?</h1>
 
 <pre><code class="javascript" data-trim data-noescape>
