--- a/slides/curry.html
+++ b/slides/curry.html
@@ -3,14 +3,14 @@
 
 
 <ul>
-    <li>Appliquer une fonction à plusieurs de ses arguments</li>
-    <li>Récupérer une fonction des arguments restants</li>
-    <li>Currying = cas particulier, 1 argument à la fois</li>
+  <li>Appliquer une fonction à plusieurs de ses arguments</li>
+  <li>Récupérer une fonction des arguments restants</li>
+  <li>Currying = cas particulier, 1 argument à la fois</li>
 </ul>
 
 
 
 <aside class="notes">
-   - mieux vaut utiliser le currying à l'application partielle en général car le type de retour est toujours prévisible<br> 
-   - il existe dans lodash une fonction curry qui transforme n'importe quelle fonction en fonction curryée<br>
+  mieux vaut utiliser le currying à l'application partielle en général car le type de retour est toujours prévisible<br> 
+  il existe dans lodash une fonction curry qui transforme n'importe quelle fonction en fonction curryée
 </aside>
