--- a/slides/immutable.html
+++ b/slides/immutable.html
@@ -1,20 +1,19 @@
 <h1>Immutable.js</h1>
 
 <ul>
-    <li>Une structure de données immuable ne peut pas être modifiée une fois créée.</li>
-    <li>Intérêt: éviter les couplages accidentels, accès à des techniques de mémoisation, égalité </li>
-    <li>JavaScript ne fournit pas d'objet immuable</li>
-    <li>simplifie le test d'égalité de valeur entre 2 objets</li>
-    <li><a href="https://facebook.github.io/immutable-js/">Immutable.js</a> fournit des structures de données immuables: List, Stack, Map, OrderedMap, Set, OrderedSet et Record.</li>
-    <li>Alternative: <a href="https://github.com/swannodette/mori">mori</a></li>
-
+  <li>Une structure de données immuable ne peut pas être modifiée une fois créée.</li>
+  <li>Intérêt: éviter les couplages accidentels, accès à des techniques de mémoisation, égalité </li>
+  <li>JavaScript ne fournit pas d'objet immuable</li>
+  <li>simplifie le test d'égalité de valeur entre 2 objets</li>
+  <li><a href="https://facebook.github.io/immutable-js/">Immutable.js</a> fournit des structures de données immuables: List, Stack, Map, OrderedMap, Set, OrderedSet et Record.</li>
+  <li>Alternative: <a href="https://github.com/swannodette/mori">mori</a></li>
 </ul>
-    <!-- TODO: donner des arguments de l'intérêt des structures de données immuables en js -->
-    <aside class="notes">
-    - Immutable.js développé par Facebook<br>
-    - On peut utiliser Object.freeze en JavaScript, mais l'immuabilité ne fonctionnera qu'au premier niveau.<br>
-    - Mémoisation: cache de résultats de calculs<br>
-    - test d'égalité de valeur, en JS l'égalité entre objets se base sur la référence. avec l'immutabilité, on peut savoir si un objet a été modifié ou non (et par exemple pour react, savoir si on doit mettre à jour la vue ou pas)<br>
-    </aside>
-<br />
+
+<!-- TODO: donner des arguments de l'intérêt des structures de données immuables en js -->
+<aside class="notes">
+Immutable.js développé par Facebook<br>
+On peut utiliser Object.freeze en JavaScript, mais l'immuabilité ne fonctionnera qu'au premier niveau.<br>
+Mémoisation: cache de résultats de calculs<br>
+test d'égalité de valeur, en JS l'égalité entre objets se base sur la référence. avec l'immutabilité, on peut savoir si un objet a été modifié ou non (et par exemple pour react, savoir si on doit mettre à jour la vue ou pas)<br>
+</aside>
 
