--- a/slides/lodash.html
+++ b/slides/lodash.html
@@ -19,7 +19,7 @@
     <li>Une bonne alternative: <a href="">Ramda</a></li>
 </ul>
 <aside class="notes">
-lodash: mentionner rapidement underscore, lodash a démarré comme un fork puis entierement réécrit, avec plus de fonctionnalités... définitivement à préférer à underscore
-lodash/fp: des méthodes immutables, auto-curriées, fonction en premier, donnée en dernier
+lodash: mentionner rapidement underscore, lodash a démarré comme un fork puis entierement réécrit, avec plus de fonctionnalités... définitivement à préférer à underscore<br>
+lodash/fp: des méthodes immutables, auto-curriées, fonction en premier, donnée en dernier<br>
 Ramda: même principe, auto-currying, composition, ...
 </aside>
