--- a/slides/mixpoofonctionelle.html
+++ b/slides/mixpoofonctionelle.html
@@ -5,6 +5,7 @@
   <li>on peut réutiliser du code existant</li>
   <li>on peut préférer la POO pour certains aspects</li>
   <li>au final, plus un choix subjectif qu'une règle d'or</li>
+  <li>juste éviter de mixer les deux dans un même namespace</li>
 </ul>
 
 <aside class="notes">
