--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
             <blockquote>
               Une fonction pure est une fonction déterministe sans changements d'état.
             </blockquote>
+            <br>
             <blockquote>
               Elle n'utilise que ses paramètres et ses variables locales.
             </blockquote>
@@ -335,6 +336,9 @@
           <section data-external="slides/react.html"></section>
           <section data-external="slides/async.html"></section>
           <section data-external="slides/promises.html"></section>
+          <section data-external="slides/promises2.html"></section>
+          <section data-external="slides/promises3.html"></section>
+          <section data-external="slides/promises4.html"></section>
           <section data-external="slides/streams.html"></section>
           <section>
             <h1>Les libs</h1>
