--- a/slides/promises.html
+++ b/slides/promises.html
@@ -1,12 +1,15 @@
 
 <h1>Promises</h1>
 
-Indispensable pour une saine gestion d'erreur.
+<ul>
+  <li>meilleure gestion des erreurs</li>
+  <li>dans un contexte asynchrone</li>
+  <li>différentes implémentations, même idée</li>
+  <li>pallier au "callback hell" (⚠)</li>
+</ul>
 
-TBD
-
-<!--
-une promise est un monad
-
--->
-
+<aside class="notes">
+une promise est un monad<br>
+representer un comportement dont on ne connait pas encore l'issue<br>
+peut pallier au callback hell mais ..
+</aside>
