--- a/index.html
+++ b/index.html
@@ -309,6 +309,10 @@
           <section data-external="slides/monad.html"></section>
           <section data-external="slides/maybe.html"></section>
           <section data-external="slides/either.html"></section>
+          <section data-external="slides/promises.html"></section>
+          <section data-external="slides/promises2.html"></section>
+          <section data-external="slides/promises3.html"></section>
+          <section data-external="slides/promises4.html"></section>
         </section>
 
         <!-- Les amis - ->
@@ -335,11 +339,6 @@
           </section>
           <section data-external="slides/react.html"></section>
           <section data-external="slides/async.html"></section>
-          <section data-external="slides/promises.html"></section>
-          <section data-external="slides/promises2.html"></section>
-          <section data-external="slides/promises3.html"></section>
-          <section data-external="slides/promises4.html"></section>
-          <section data-external="slides/streams.html"></section>
           <section>
             <h1>Les libs</h1>
             <img class="workimg" src="css/workimg/johnny-automatic-books-800px.png" style="height:auto;margin:8% 26% 0 auto;width:50%;">
@@ -356,7 +355,7 @@
 
         <!-- Bye -->
         <section>
-          <h1>Questions<h1>
+          <h1>Questions ?<h1>
         </section>
         <section data-external="slides/biblio.html"></section>
       </div>
