--- a/slides/poocnul.html
+++ b/slides/poocnul.html
@@ -4,5 +4,5 @@
 <ul>
   <li>un progrès dans la façon de coder</li>
   <li>séparation des responsabilités</li>
-  <li style="list-style-type: none; text-align: center; margin: 15px 0;">mais</li>
+  <li style="list-style-type: none; text-align: center; margin: 15px 0; font-weight: bold;">MAIS</li>
 </ul>
