--- a/index.html
+++ b/index.html
@@ -255,15 +255,16 @@
           <section data-external="slides/ex_fonctionpure.html"></section>
 
           <section>
-            <aside class="notes">
-              Vincent<br>
-            </aside>
             <h1>Pour quoi faire ?</h1>
             <blockquote>
               En gardant des fonctions pures, on évite les mutations, et donc les effets de bords.
             </blockquote>
-            <section data-external="slides/ex_mutations.html"></section>
+            <aside class="notes">
+              Vincent<br>
+            </aside>
           </section>
+          <section data-external="slides/ex_mutations.html"></section>
+          <section data-external="slides/fonctionalonly.html"></section>
 
           <section>
             <aside class="notes">
