--- a/slides/ex_fonctionimpure.html
+++ b/slides/ex_fonctionimpure.html
@@ -12,6 +12,7 @@ function addNote(note) {
 <h4 class="fragment"><br>NON: elle modifie une variable externe</h4>
 
 <aside class="notes">
+  Question pour vous: cette fonction est-elle pure ? Levez la main ..<br><br>
   Cette fonction est impure car elle modifie la variable externe partition<br>
   On dit qu'elle effectue une mutation sur la variable partition
 </aside>
