--- a/slides/ex_mutations.html
+++ b/slides/ex_mutations.html
@@ -1,6 +1,6 @@
 <h1>Mutations ?</h1>
 
-<pre class="fragment"><code class="javascript" data-trim data-noescape>
+<pre><code class="javascript" data-trim data-noescape>
 var notes = [ 'do', 'ré', 'mi', 'fa' ];
 
 function addNote (note) {
