--- a/slides/function_as_argument.html
+++ b/slides/function_as_argument.html
@@ -13,3 +13,8 @@ function show (event){
 }
 simpleTrack().forEach(show)
 </code></pre>
+
+<aside class="notes">
+  IMPORTANT<br>
+  Les novices peuvent confondre définition, appel, et référence
+</aside>
