--- a/slides/promises.html
+++ b/slides/promises.html
@@ -4,12 +4,11 @@
 <ul>
   <li>meilleure gestion des erreurs</li>
   <li>dans un contexte asynchrone</li>
-  <li>différentes implémentations, même idée</li>
   <li>pallier au "callback hell" (⚠)</li>
 </ul>
 
 <aside class="notes">
-une promise est un monad<br>
-representer un comportement dont on ne connait pas encore l'issue<br>
+une promise est un monad.<br>
+representer un comportement dont on ne connait pas encore l'issue.<br>
 peut pallier au callback hell mais ..
 </aside>
