--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
             </section>
             <section data-external="slides/curry.html"></section>
             <section data-external="slides/curry2.html"></section>
+            <section data-external="slides/curry3.html"></section>
         </section>
 
         <!-- concepts avancés -->
@@ -333,19 +334,14 @@
             <img class="workimg" src="css/workimg/johnny-automatic-landscape-5-800px.png" style="height:auto;margin: 15% 7% 0 auto">
           </section>
           <section>
-            <h1>Les "amis"</h1>
-            <aside class="notes">
-              Vincent<br>
-            </aside>
-          </section>
-          <section data-external="slides/react.html"></section>
-          <section data-external="slides/async.html"></section>
-          <section>
             <h1>Les libs</h1>
             <img class="workimg" src="css/workimg/johnny-automatic-books-800px.png" style="height:auto;margin:8% 26% 0 auto;width:50%;">
           </section>  
           <section data-external="slides/lodash.html"></section>
           <section data-external="slides/immutable.html"></section>
+          <section data-external="slides/react.html"></section>
+          <section data-external="slides/react2.html"></section>
+          <section data-external="slides/async.html"></section>
           <section data-external="slides/fpjslibs.html"></section>
           <section>
             <h1>Le futur</h1>
