added example for react.js

--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
           <section data-external="slides/immutable.html"></section>
           <section data-external="slides/react.html"></section>
           <section data-external="slides/react2.html"></section>
+          <section data-external="slides/react3.html"></section>
           <section data-external="slides/async.html"></section>
           <section data-external="slides/fpjslibs.html"></section>
           <section>
