--- a/slides/composition4.html
+++ b/slides/composition4.html
@@ -1,22 +1,18 @@
-<img class="workimg" src="css/workimg/johnny-automatic-Mississippi-pilot-800px.png" style="height:50%;position:absolute;left:-21%;top:39%">
-<h1>Tap() et trace()</h1>
-
-Comment débugguer un pipe() ?<br>
+<h1>Composition</h1>
 
 <!-- exemple -->
 <pre><code class="javascript" data-trim data-noescape>
-// avec tap() et trace() !
+//exemple fonctionnel
 
 function displayNotes(elem) {
-  pipe(
+  return pipe(
     map(noteValueToText),
-    tap(alert),
     join(' '),
-    trace('après le join()'),
     addToDomElem(elem)
   );
 }
 
+var outputNotes = displayNotes('output');
+outputNotes([1,2,3]);
+
 </code></pre>
-
-
