--- a/slides/flatmap.html
+++ b/slides/flatmap.html
@@ -2,7 +2,7 @@
 <h1>flatMap()</h1>
 
 <blockquote>
-Applique une fonction à chaque élément, et<br> retourne une liste plate</b>.
+Applique une fonction à chaque élément, et<br> retourne une liste <b>"aplatie"</b>.
 </blockquote>
 
 <br>
