--- a/index.html
+++ b/index.html
@@ -288,6 +288,8 @@
           <section data-external="slides/composition2.html"></section>
           <section data-external="slides/composition3.html"></section>
           <section data-external="slides/composition4.html"></section>
+          <section data-external="slides/composition5.html"></section>
+          <section data-external="slides/composition6.html"></section>
         </section>
 
         <section>
@@ -309,6 +311,7 @@
           </section>
           <section data-external="slides/struct-algebriques.html"></section>
           <section data-external="slides/monad.html"></section>
+          <section data-external="slides/monad2.html"></section>          
           <section data-external="slides/maybe.html"></section>
           <section data-external="slides/either.html"></section>
           <section data-external="slides/promises.html"></section>
