--- a/slides/composition4.html
+++ b/slides/composition4.html
@@ -13,6 +13,6 @@ function displayNotes(elem) {
 }
 
 var outputNotes = displayNotes('output');
-outputNotes([1,2,3]);
+outputNotes(notes);
 
 </code></pre>
