--- a/slides/curry3.html
+++ b/slides/curry3.html
@@ -1,7 +1,7 @@
-<h1>Petit Exercice</h1>
+<h1>Exercice</h1>
 
 Implémenter map, join, addToDomElem<br>
-en y mettant un peu de curry<br>
+en y mettant un peu de curry 🍜<br>
 
 <pre><code class="javascript" data-trim data-noescape>
 function displayNotes(elem) {
