--- a/slides/biblio.html
+++ b/slides/biblio.html
@@ -7,6 +7,7 @@
 <li><a href="https://bethallchurch.github.io/JavaScript-and-Functional-Programming/">Bonnes pratiques</a></li>
 <li><a href="https://github.com/hemanth/functional-programming-jargon">Dictionnaire des principaux concepts et design patterns (ES2015)</a></li>
 <li><a href="https://github.com/you-dont-need/You-Dont-Need-Lodash-Underscore">You don't need Lodash/Underscore</a></li>
+<li><a href="http://jrsinclair.com/articles/2016/marvellously-mysterious-javascript-maybe-monad/">The Marvellously Mysterious JavaScript Maybe Monad</a></li>
 </ul>
 
 
