--- a/slides/biblio.html
+++ b/slides/biblio.html
@@ -5,7 +5,7 @@
 <li><a href="https://leanpub.com/javascriptallongesix/read">JavaScript allongé: ebook gratuit, très complet</a></li>
 <li><a href="https://medium.com/javascript-scene/the-two-pillars-of-javascript-pt-2-functional-programming-a63aa53a41a4#.7fisec239">Introduction très haut niveau</a></li>
 <li><a href="https://bethallchurch.github.io/JavaScript-and-Functional-Programming/">Bonnes pratiques</a></li>
-<li><a href="https://github.com/hemanth/functional-programming-jargon">Dictionnaire des principaux concepts et design patterns (ES2015)</a></li>
+<li><a href="https://github.com/hemanth/functional-programming-jargon">Dictionnaire des principaux concepts et design patterns</a></li>
 <li><a href="https://github.com/you-dont-need/You-Dont-Need-Lodash-Underscore">You don't need Lodash/Underscore</a></li>
 <li><a href="http://jrsinclair.com/articles/2016/marvellously-mysterious-javascript-maybe-monad/">The Marvellously Mysterious JavaScript Maybe Monad</a></li>
 </ul>
