--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/theme/white.css">
     <link rel="stylesheet" href="lib/css/zenburn.css">
     <link rel="stylesheet" href="lib/font/abril-fatface/abril-fatface.css">
+    <link rel="stylesheet" href="lib/font/abril-fatface/abril-fatface.css">
     <style type="text/css">
     .reveal blockquote {
       width: 90%;
@@ -48,11 +49,11 @@
       height: 45%;
       float: right;
     }
-
     .reveal section h1, .reveal section h2, .reveal section h3, .reveal section h4, .reveal section h5, .reveal section h6 {
-        font-family: "abril-fatface", Times;
-        font-weight: initial;
-        text-transform: none;
+      font-family: "AkkadianRegular", Times;
+      font-weight: initial;
+      text-transform: none;
+      letter-spacing: 1px;
     }
     </style>
   </head>
