--- a/slides/maybe.html
+++ b/slides/maybe.html
@@ -3,7 +3,7 @@
 <blockquote>
 Soit un objet, soit <em>null</em>
 </blockquote>
-<pre><code id="composition" class="javascript" data-trim data-noescape>
+<pre><code  class="javascript" data-trim data-noescape>
 // création d'un Maybe
 var a = Maybe.some(object);
 var b = Maybe.none();
@@ -13,11 +13,12 @@ var c = a.flatMap(task);
 // task n'a pas besoin de gérer le cas null / undefined
 
 // récupérer la valeur (si nécessaire)
-var d = c.getOrElse(default);
+var d = c.orElse(default);
 var e = c.isNone()
 </code></pre>
 
 <aside class="notes">
-utile pour éviter de dupliquer des tests de valeurs null ou undefined dans chaque fonction d'une chaîne
+utile pour éviter de dupliquer des tests de valeurs null ou undefined dans chaque fonction d'une chaîne<br>
+la méthode flatMap est aussi appelée chain
 </aside>
 
